--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==6.3.3
 Django==4.0.4
 django-cors-headers==3.12.0
 djangorestframework==3.13.1
